Backend/manifest/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: hera89/budget-frontend:v1 
        ports:
        - containerPort: 80 
        
       
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app-route
spec:
  hosts:
  - "*"
  gateways:
  - budget-gateway 
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: my-app
        port:
          number: 80
